--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ requires = ["setuptools>=61.0", "wheel"]
 build-backend = "setuptools.build_meta"
 
 [project]
-name = "directory"
+name = "directory-agent"
 version = "1.0.0"
 description = "AI-powered filesystem management via natural language"
 authors = [
